Fixed deprecated URL call
URI needed to pass to URL since version 20